<resources>
    <string name="app_name">Cashoo</string>
    <string name="title_home">Home</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_add">Add</string>
    <string name="title_category">Category</string>
    <string name="title_rewards">Rewards</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="category_icon">Category Icon</string>
    <string name="appbar_scrolling_view_behavior">scroll</string>
    <string name="title_settings">Settings</string>
    <string name="title_editProfile">Edit Profile</string>
    <string name="terms_text">
    I\'ve read and agree with the <font color="#D9A53E">Terms and Conditions</font> and the <font color="#D9A53E">Privacy Policy</font>.
</string>

</resources>
    <!-- (Angga Risky, 2017) -->

    <!-- Reference List:
    Angga Risky. 2017. Rewards UI Design to Android XML Tutorial. [video online]. Available at: https://www.youtube.com/watch?v=fjXMx_iLkTY [Accessed on 10 April 2025]
    GeeksforGeeks. 2025. Android UI Layouts. [online]. Available at: https://www.geeksforgeeks.org/android-ui-layouts/ [Accessed on 10 April 2025] -->